refactor: Change method call
JDK version switched from 21 to 17.